--- a/html/about.html
+++ b/html/about.html
@@ -4,80 +4,148 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Practice Yoga Health Awareness Body Hatha Vinyasa Nidra Meditaton Beginners " />
-    <meta name="description" content="How I Practice and Teach, and my Yoga Journey" />
+    <meta
+      name="keywords"
+      content="Practice Yoga Health Awareness Body Hatha Vinyasa Nidra Meditaton Beginners Therapy Energetic Heal"
+    />
+    <meta
+      name="description"
+      content="My Yoga Journey along with energetic therapies, how I teach and how I practice"
+    />
     <link rel="stylesheet" href="../public/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/logo.png" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Whisper&family=Cormorant&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Whisper&family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <title>About Me</title>
+    <script
+      src="https://kit.fontawesome.com/387e02c63e.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>About - Yoga with Sibylle</title>
   </head>
   <body>
     <header>
       <div class="logo-container">
         <a href="./index.html">
-          <div class="logo logo--1">Yoga</div>
-          <div class="logo logo--2">with</div>
-          <div class="logo logo--3">Sibylle</div>
+          <img src="../img/logo.png" alt="Logo Yoga with Sibylle" />
         </a>
       </div>
 
       <nav class="nav">
         <div class="nav__link"><a href="./about.html">Who I Am</a></div>
         <div class="nav__link"><a href="./offerings.html">Offerings</a></div>
-        <div class="nav__link"><a href="./audios.html">Free Meditations</a></div>
+        <div class="nav__link">
+          <a
+            class="infobulle"
+            href="./audios.html"
+            aria-label="Free guided meditations"
+            >Meditate</a
+          >
+        </div>
         <div class="nav__link"><a href="./contact.html">Contact</a></div>
       </nav>
+
+      <button class="dropdown--btn">
+        <i class="fa-sharp fa-solid fa-caret-down"></i>
+      </button>
     </header>
 
-    <section>
-      <div class="heading--bloc margin">My Yoga Journey</div>
+    <div class="dropdown--menu">
+      <nav class="dropdown__nav">
+        <ul>
+          <li><a href="./about.html">Who I Am</a></li>
+          <li><a href="./offerings.html">Offerings</a></li>
+          <li>
+            <a class="nav__link--bull" href="./audios.html">Meditate</a>
+          </li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <section class="page">
+      <div class="title bloc-title margin">My Yoga Journey</div>
       <div class="txt bloc-txt">
-        I discovered Yoga travelling around South America, mostly passing by
-        Hare Krishna’s Temples.
-        <br> While I was initiated to the Vedic Philosophy, the concept of “all is one” and Union of Body, Mind and Soul grew inside
-        me. I started practicing Energetic Therapies through which you can only
-        perceive human and his surroundings in a holistic way.
-        <br> In 2019, I graduated of 200H Yoga Teacher Training of Vrinda Bhumi School in
-        Verkala - India, where I also learned some of the basis of Ayurveda and
-        Ayurvedic Massages Saatwika Ayurveda Academy. 
-        <br>
-        <br> Yoga gave me peace, but also a structure. 
-        <br> It is a philosophy as much as it is a practice.
-        <br> A philosophy of acceptance, devotion, union. A practice of discipline and
-        letting it go.
-        <br> Not only I could feel the physical benefits on my body,
-        stronger, more energized, also I started to feel more grounded and
-        connected. Altogether, I felt better!
-        <br> This is what I want to share
-        through Yoga and why I have started teaching it.
+        I discovered Yoga while travelling around South America.
+        <br />
+        Passing by Hare Krishna’s Temples, I was initiated to Yoga and to the
+        Vedic Philosophy. Since, the concept of “all is one” grew inside me
+        along with the practice of yoga.
+        <br />
+
+        Yoga gave me peace, but also a structure. <br />
+        It is a philosophy as much as it is a practice. <br />
+        A philosophy of acceptance, devotion, union. A practice of discipline
+        and letting it go. <br />
+        Not only I could feel the physical benefits on my body, stronger, more
+        energized, also I started to feel more grounded and connected.
+        <br />
+        Altogether, I felt better! <br />
+        This is what I want to share through Yoga and why I have started
+        teaching it.
+        <br />
+        Interested in a holisitc approach of the body and how to take car of it,
+        I started practicing Energetic Therapies three years ago.<br />
+        In 2019, I graduated of 200H Yoga Teacher Training of Vrinda Bhumi
+        School in India, where I also learned some of the basis of Ayurveda and
+        Ayurvedic Massages Saatwika Ayurveda Academy.
+
+        <br />Combining Meditation and Energetic Therapy, I got rid of my
+        hyperphagia and it helped me a lot going out of depression and changing
+        my perspectives. Anytime I am feeling down I know I can turn towards
+        those tools<br />
+        I genuinely want people to feel good, which is why I started offering
+        energetic cares.
       </div>
 
-      <div class="heading--bloc">How I Practice</div>
+      <div id="howiteach" class="title bloc-title">How I Teach</div>
       <div class="txt bloc-txt">
-        Some days I like to flow improvising new <em> Vinyasas</em>, some other days I
-        follow a strict <em>Hatha</em>  pattern. Sometimes I add up reps or fascia work
-        techniques, and other times I just melt in a <em>Yin practice</em> of
-        restoration. Days I just breath consciously and this is all.
-      </div>
-      <div class="heading--bloc">How I Teach</div>
-      <div class="txt bloc-txt">
-        My approach to teach yoga is to make you listen to your body and
-        cultivate <em> body awareness</em>, pointing micro adjustments you can create in a
-        posture, giving you the understanding of where to take the energy from, how to create space in your body.
-        <br>
+        My approach into sharing yoga is to make you listen to your own body.
+        Instead of trying to reproduce what you may think is "The way to do it"
+        or a perfect shape, you'll get to connect with yourself. Your shape is
+        what matters, and how you evolve with and within it.
+        <br />
+        <div class="emphase">
+          As Every Body Is Different, Each Practice is Unique
+        </div>
+        You will dive into deep breathwork, make your energy flow easily through
+        you, release tensions. I will guide you into cultivating
+        <em> body awareness</em>, pointing out micro adjustments you can create
+        in a posture, giving you the understanding of where to take the energy
+        from and how to create space in your body.
+        <br />
         I give importance to the core and pelvic work as it is fundamental for
-        good posture and relief backpain. 
-        <br>
-      <div class="emphase"> As Every Body Is Different, Each Practice is Unique </div>
-      Yoga is for everybody, own your practice, it is yours !
-      Do not bridle yourself, you'll see how good you'll feel after one session.
-      
+        good posture and to relief backpain.
+        <br />
+
+        Yoga is for everybody !
+        <br />
+        I cannot stress that enough ! Do not bridle yourself : you don't have to
+        be already strong, or flexible… You'll eventually get to it by
+        practicing Asanas consistently but that's not the only point for
+        practicing yoga.
+        <br />
+        Connection, of body, mind and spirit is what is seeken. <br />
+        So you just have to be you, willing to inner grow, opening your body,
+        your mind and your spirit. Not that's anything easy… Sometimes laying
+        ourselves bare can be challenging, here is when the practice makes you
+        elvove.
+        <br />
+        Own your practice, it is yours !
+      </div>
+
+      <div class="title bloc-title">How I Practice</div>
+      <div class="txt bloc-txt">
+        Some days I like to flow improvising new <em> Vinyasas</em>, some other
+        days I follow a strict <em>Hatha</em> pattern. Sometimes I add up reps
+        or fascia work techniques, and other times I just melt in a
+        <em>Yin practice</em> of restoration. Days I just breath consciously and
+        this is all.
       </div>
     </section>
+    <script src="../js/menu.js"></script>
   </body>
 </html>
